Refactoring
- Adicionando mysql
- Melhorando logs de erro
- Melhorando estrutura de pacotes
- Adicionando migrations
- Adicionando envs
